Added method to display every second line form file